# qtt

./: .gitignore  CMakeLists.txt
qtdg-base.cuda/include/: qtdg-base-config.h.in  qtdg-base.h
qtdg-base.cuda/source/: computing.cc  computing.cu  qtdg-base.cc
